--- a/style/style.css
+++ b/style/style.css
@@ -168,11 +168,37 @@ main img.pequena {
   max-width: 700px;
   display: block;
   margin: auto;
+  position: relative;
 }
 
 .droid:hover {
   filter: drop-shadow(3px 3px 4px rgba(0, 0, 0, 0.849));
+  animation: droid 1s infinite 3s;
+  position: absolute;
   
+}
+
+@keyframes droid {
+  0% {
+    transform: translate(0);
+
+  }
+
+  25% {
+    transform: translate(-5px, 5px);
+  }
+
+  50% {
+    transform: translate(5px, 5px);
+  }
+
+  75% {
+    transform: translate(5px, -5px);
+  }
+
+  100% {
+    transform: translate(0);
+  }
 }
 
 .irina {
