--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,11 @@
   --cor4: #1a5c37;
   --cor5: #063d1e;
 
+  --cor6: #FFFFFF;
+  --cor7: #1F18F4;
+
+
+
   --fonte-padrao: Arial, Verdana, Helvetica, Sans-serif;
   --fonte-destaque: 'Bebas neue',  cursive;
   --fonte-android: 'Android', cursive;
@@ -27,11 +32,10 @@
 }
 
 body {
-    background-color: white;
+    background-color: var(--cor6);
     background-color: var(--cor5);
     font-family: var(--fonte-padrao);
-    
-    
+        
 }
 
 a.externo::after {
@@ -50,23 +54,23 @@ header > h1 {
   font-size: 3em;
   font-family: var(--fonte-destaque);
   font-weight: normal;
-  color: white;
+  color: var(--cor6);
   text-align: center;
-  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.64);
+  text-shadow: 3px 2px 1px rgba(0, 0, 0, 0.64);
   
 }
 
 header > p {
   font-family: var(--fonte-padrao);
   font-size: 1.2em;
-  color: white;
+  color: var(--cor6);
   text-align: center;
   max-width: 500px;
   margin: auto;
-  margin-bottom: 20px;
+  padding-bottom: 50px;
   padding-right: 10px;
   padding-left: 10px;
-  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.64);
+  text-shadow: 3px 2px 1px rgba(0, 0, 0, 0.64);
 
 }
 
@@ -77,7 +81,7 @@ nav {
 }
 
 nav > a {
-  color: var(--cor1);
+  color: var(--cor2);
   padding: 10px;
   text-decoration: none;
   font-weight: bold;
@@ -93,7 +97,7 @@ nav > a:hover {
 main {
   min-height: 300px;
   max-width: 1000px;
-  background-color: white;
+  background-color: var(--cor6);
   margin: auto;
   margin-bottom: 30px;
   padding: 20px;
@@ -104,7 +108,7 @@ main {
 }
 
 main h1 {
-  font-family: var(--fonte-android);
+  font-family: Var(--fonte-android);
   font-weight: normal;
   color: var(--cor5);
   font-size: 1.8em;
@@ -148,7 +152,7 @@ main a {
 }
 
 main a:hover {
-  color: blue;
+  color: var(--cor7);
   text-decoration: underline;
 
 }
@@ -162,20 +166,21 @@ main img.pequena {
   max-width: 320px;
   display: block;
   margin: auto;
+
 }
 
 .droid {
   max-width: 700px;
-  display: block;
   margin: auto;
   position: relative;
+  display: inline-block;
 }
 
 .droid:hover {
-  filter: drop-shadow(3px 3px 4px var(--cor2));
+  filter: drop-shadow(2px 2px 3px var(--cor2));
   position: relative;
   display: inline-block;
-  animation: 1s droid 2s infinite;
+  animation: 1s droid 3s infinite;
  
 }
 
@@ -183,6 +188,8 @@ main img.pequena {
   max-width: max-content;
   display: block;
   margin: auto;
+  border-radius: 50%;
+  padding-bottom: 20px;
 
 }
 
@@ -200,7 +207,8 @@ div.video > iframe {
   top: 5%;
   left: 5%;
   width: 90%;
-  height: 90%;
+  height: 90%; 
+  border-radius: 8px;
 }
 
 aside {
@@ -213,7 +221,7 @@ aside {
 
 aside > h3 {
   background-color: var(--cor4);
-  color: white;
+  color: var(--cor6);
   padding: 10px;
   margin: -10px -10px 0px -10px;
   border-radius: 10px 10px 0px 0px;
@@ -225,7 +233,7 @@ aside > ul {
   columns: 2;
 }
 
-aside > p > a.externo {
+aside > p > a {
   background-color: var(--cor2);
   color: var(--cor4);
   border-radius: 4px;
@@ -236,23 +244,23 @@ aside > p > a.externo {
 }
 
 aside > p > a:hover {
-  color: blue;
+  color: var(--cor7);
   text-decoration: underline;
 }
 
 footer {
   background-color: var(--cor5);
-  color: white;
+  color: var(--cor6);
   text-align: center;
   font-size: 0.8em;
   padding: 5px;
 }
 
 footer a {
-  color: white;
+  color: var(--cor6);
   font-weight: bolder;
   text-decoration: none;
-  
+   
 }
 
 footer a:hover {
@@ -265,17 +273,21 @@ footer a:hover {
   0%  {
     transform: translate(0);
   }
+
   25%{
    transform: translate(-5px, 5px);
   }
+  
   50%{
-   transform: translate(5px ,-5px);
+   transform: translate(5px, 5px);
   }
+  
   75%{
    transform: translate(-5px, 5px);
   }
+  
   100%{
    transform: translate(0);
   }
- }
+}
 
