--- a/style/style.css
+++ b/style/style.css
@@ -121,6 +121,7 @@ main h2 {
   background-image: linear-gradient(to right, var(--cor2), transparent);
   color: var(--cor4);
   text-indent: 8px;
+  padding: 3px;
 
 }
 
@@ -172,13 +173,15 @@ main img.pequena {
   margin: auto;
   position: relative;
   display: inline-block;
+  animation: 1.2s droid 3s infinite;
+  animation: name duration timing-function delay;
 }
 
 .droid:hover {
-  filter: drop-shadow(2px 2px 3px var(--cor2));
+  filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.415));
   position: relative;
   display: inline-block;
-  animation: 1s droid 3s infinite;
+  animation: 1.2s droid 3s infinite;
  
 }
 
@@ -220,6 +223,7 @@ aside {
 aside > h3 {
   background-color: var(--cor4);
   color: var(--cor6);
+  text-indent: 20px;
   padding: 10px;
   margin: -10px -10px 0px -10px;
   border-radius: 10px 10px 0px 0px;
