--- a/style/style.css
+++ b/style/style.css
@@ -20,45 +20,48 @@
   --cor7: #1F18F4;
 
   --fonte-padrao: Arial, Verdana, Helvetica, Sans-serif;
-  --fonte-destaque: 'Bebas neue',  cursive;
+  --fonte-destaque: 'Bebas neue', cursive;
   --fonte-android: 'Android', cursive;
+
 }
 
 * {
   margin: 0px;
   padding: 0px;
+
 }
 
 body {
-    background-color: var(--cor6);
-    background-color: var(--cor5);
-    font-family: var(--fonte-padrao);
-        
+  background-color: var(--cor6);
+  background-color: var(--cor5);
+  font-family: var(--fonte-padrao);
+
 }
 
 a.externo::after {
-   content:'\00A0\1F517';
+  content: '\00A0\1F517';
 
 }
 
 header {
-  background-image: linear-gradient(to bottom, var(--cor2), var(--cor5));
+  background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
   min-height: 150px;
-  text-align: center; 
-  padding-top: 40px; 
+  text-align: center;
+  padding-top: 40px;
+
 }
 
-header > h1 {
+header>h1 {
   font-size: 3em;
   font-family: var(--fonte-destaque);
   font-weight: normal;
   color: var(--cor6);
   text-align: center;
   text-shadow: 3px 2px 1px rgba(0, 0, 0, 0.64);
-  
+
 }
 
-header > p {
+header>p {
   font-family: var(--fonte-padrao);
   font-size: 1.2em;
   color: var(--cor6);
@@ -76,9 +79,10 @@ nav {
   background-color: var(--cor5);
   padding: 10px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.585);
+
 }
 
-nav > a {
+nav>a {
   color: var(--cor2);
   padding: 10px;
   text-decoration: none;
@@ -86,10 +90,12 @@ nav > a {
   transition-duration: 0.4s;
 }
 
-nav > a:hover {
+nav>a:hover {
   background-color: var(--cor3);
   color: var(--cor5);
   border-radius: 5px;
+  font-size: x-large;
+  
 }
 
 main {
@@ -102,7 +108,7 @@ main {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.533);
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  
+
 }
 
 main h1 {
@@ -110,7 +116,7 @@ main h1 {
   font-weight: normal;
   color: var(--cor5);
   font-size: 1.8em;
-  
+
 
 }
 
@@ -129,14 +135,15 @@ main p {
   margin: 15px 0px;
   text-align: justify;
   text-indent: 30px;
-  font-size: 1em;
+  font-size: 1.4em;
   line-height: 2em;
+
 }
 
 main strong {
   color: var(--cor5);
   font-weight: bold;
-  padding: 2px 6px;
+  padding: 3px 6px;
 
 }
 
@@ -147,7 +154,7 @@ main a {
   text-decoration: none;
   font-weight: bold;
   padding: 2px 6px;
-  
+
 }
 
 main a:hover {
@@ -158,7 +165,7 @@ main a:hover {
 
 main img {
   width: 100%;
-  
+
 }
 
 main img.pequena {
@@ -172,17 +179,15 @@ main img.pequena {
   max-width: 700px;
   margin: auto;
   position: relative;
-  display: inline-block;
   animation: 1.2s droid 3s infinite;
-  animation: name duration timing-function delay;
+  
 }
 
 .droid:hover {
   filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.415));
   position: relative;
-  display: inline-block;
   animation: 1.2s droid 3s infinite;
- 
+
 }
 
 .irina {
@@ -203,13 +208,14 @@ div.video {
 
 }
 
-div.video > iframe {
+div.video>iframe {
   position: absolute;
   top: 5%;
   left: 5%;
   width: 90%;
-  height: 90%; 
+  height: 90%;
   border-radius: 12px;
+
 }
 
 aside {
@@ -220,76 +226,85 @@ aside {
 
 }
 
-aside > h3 {
+aside>h3 {
   background-color: var(--cor4);
   color: var(--cor6);
   text-indent: 20px;
   padding: 10px;
   margin: -10px -10px 0px -10px;
   border-radius: 10px 10px 0px 0px;
+
 }
 
-aside > ul {
-  list-style-type:'\2714\00A0\00A0';
+aside>ul {
+  list-style-type: '\2714\00A0\00A0';
   list-style-position: inside;
   columns: 2;
+
 }
 
-aside > p > a {
+aside>p>a {
   background-color: var(--cor2);
   color: var(--cor4);
   border-radius: 4px;
   text-decoration: none;
   font-weight: bold;
   padding: 2px 6px;
-  
+
 }
 
-aside > p > a:hover {
+aside>p>a:hover {
   color: var(--cor7);
   text-decoration: underline;
+
+}
+
+aside>ul>li>abbr:hover {
+  background-color: var(--cor2);
+  border-radius: 5px;
+  font-size: large;
 }
 
 footer {
   background-color: var(--cor5);
   color: var(--cor6);
   text-align: center;
-  font-size: 0.8em;
-  padding: 5px;
+  font-size: 0.9em;
+  padding: 10px;
+
 }
 
 footer a {
   color: var(--cor6);
   font-weight: bolder;
   text-decoration: none;
-   
+
 }
 
 footer a:hover {
-   text-decoration: underline;
-   color: var(--cor1);
+  text-decoration: underline;
+  color: var(--cor2);
 
 }
 
 @keyframes droid {
-  0%  {
+  0% {
     transform: translate(0);
   }
 
-  25%{
-   transform: translate(-5px, 5px);
+  25% {
+    transform: translate(-5px, 5px);
   }
-  
-  50%{
-   transform: translate(5px, 5px);
+
+  50% {
+    transform: translate(5px, 5px);
   }
-  
-  75%{
-   transform: translate(-5px, 5px);
+
+  75% {
+    transform: translate(-5px, 5px);
   }
-  
-  100%{
-   transform: translate(0);
+
+  100% {
+    transform: translate(0);
   }
 }
-
